Fix : sidebar scroll size and remove horizontal scroll

--- a/shesha-reactjs/src/components/configurableSidebarMenu/styles/index.less
+++ b/shesha-reactjs/src/components/configurableSidebarMenu/styles/index.less
@@ -4,6 +4,7 @@
       margin-right: 8px;
     }
   }
+  
   .sidebar-container-main-area {
     background-color: white !important;
 
@@ -80,4 +81,21 @@
       opacity: 0.7;
     }
   }
+
+  
+}
+
+.ant-layout-sider {
+  overflow-x: hidden;
+  height: 100vh;
+}
+
+.ant-layout-sider, ::-webkit-scrollbar {
+  width: 9px;
+  background-color: black;
+  color: black;
+}
+
+.ant-layout-sider, ::-webkit-scrollbar-track {
+  background-color: gray;
 }
